--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,14 +1,11 @@
 spring.application.name=trade-store
-server.port=8081
 server.port=8082
-spring.autoconfigure.exclude=\
-org.springframework.boot.autoconfigure.mongo.MongoAutoConfiguration,\
-org.springframework.boot.autoconfigure.kafka.KafkaAutoConfiguration
+
 # H2 Console
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2
 
-# H2 Database Config
+# H2 Database
 spring.datasource.url=jdbc:h2:mem:trade-db
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
@@ -19,11 +16,5 @@ spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 
-spring.data.mongodb.host=localhost
-spring.data.mongodb.port=27017
-spring.data.mongodb.database=trade-store-db
-
-spring.autoconfigure.exclude=\
-org.springframework.boot.autoconfigure.mongo.MongoAutoConfiguration,\
-org.springframework.boot.autoconfigure.data.mongo.MongoDataAutoConfiguration
-
+# Mongo
+spring.data.mongodb.uri=mongodb://localhost:27017/trade-store-db
