--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,3 +18,17 @@ spring.jpa.show-sql=true
 
 # Mongo
 spring.data.mongodb.uri=mongodb://localhost:27017/trade-store-db
+
+# Kafka Configuration
+spring.kafka.bootstrap-servers=localhost:9092
+spring.kafka.consumer.group-id=trade-group
+spring.kafka.consumer.auto-offset-reset=earliest
+
+# JSON Serializer/Deserializer (Important for sending Trade objects)
+spring.kafka.consumer.key-deserializer=org.apache.kafka.common.serialization.StringDeserializer
+spring.kafka.consumer.value-deserializer=org.springframework.kafka.support.serializer.JsonDeserializer
+spring.kafka.producer.key-serializer=org.apache.kafka.common.serialization.StringSerializer
+spring.kafka.producer.value-serializer=org.springframework.kafka.support.serializer.JsonSerializer
+
+# Trusted Packages (Security requirement for deserialization)
+spring.kafka.consumer.properties.spring.json.trusted.packages=com.dws.trade_store.model
